--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= gossip.content %></td>
         <td><%= gossip.anonymous_author %></td>
         <td><%= link_to 'Show', gossip %></td>
-        <td><%= link_to 'Edit', edit_gossip_path(micropost) %></td>
+        <td><%= link_to 'Edit', '#' %></td>
         <td><%= link_to 'Destroy', gossip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
