--- a/app/views/gossips/_form.html.erb
+++ b/app/views/gossips/_form.html.erb
@@ -6,8 +6,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :anonymous_author_id %>
-    <%= form.number_field :anonymous_author_id, id: :gossip_anonymous_author_id %>
+    <%= form.label :anonymous_author%>
+    <%= form.text_area :anonymous_author, id: :gossip_anonymous_author %>
   </div>
 
   <div class="actions">
