--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,7 +1,13 @@
 <h1>New gossip</h1>
 <p>Find me in app/views/gossips/new.html.erb</p>
 
-
-<%= render 'form', gossip: @gossip %>
-
-<%= link_to 'Back', gossips_path %>
+<%= form_tag gossips_path do %>
+ 
+  <%= label_tag 'content', 'Content' %>
+  <%= text_field_tag 'content' %>
+ 
+  <%= label_tag 'author', 'Author' %>
+  <%= text_field_tag 'anonymous_author' %>
+ 
+  <%= submit_tag "Add a gossip !"%>
+<% end %>
