--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -6,7 +6,7 @@
   <%= label_tag 'content', 'Content' %>
   <%= text_field_tag 'content' %>
  
-  <%= label_tag 'author', 'Author' %>
+  <%= label_tag 'anonymous_author', 'Author' %>
   <%= text_field_tag 'anonymous_author' %>
  
   <%= submit_tag "Add a gossip !"%>
