moitier de crud

--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -17,8 +17,8 @@
         <td><%= gossip.content %></td>
         <td><%= gossip.anonymous_author %></td>
         <td><%= link_to 'Show', gossip %></td>
-        <td><%= link_to 'Edit', '#' %></td>
-        <td><%= link_to 'Destroy', gossip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit',  edit_gossip_path(gossip) %></td>
+        <td><%= link_to 'Delete', gossip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
